Fixed menu spacing

--- a/src/app/templates/header/header-menu/header-menu.component.scss
+++ b/src/app/templates/header/header-menu/header-menu.component.scss
@@ -9,6 +9,7 @@
     color: $dark2;
     padding: $padding-small;
     align-items: center;
+    grid-column: span 3;
 }
 
 @media screen and (min-width: $large-up) {
